# career-presence

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
config/: credentials.env.example  master_profile.yaml.example  targets.yaml
docs/: QUICK_REFERENCE.md
github/repos/: README.example.md
github/repos/agenticraft/: README.md
interviews/: README.md
interviews/prep/: anthropic.md  template.md
interviews/questions/: technical.md
interviews/stories/: star_stories.md
mcp-servers/jobspy-mcp-server/: .eslintignore  README.md  Taskfile.yaml  eslint.config.cjs  package-lock.json  package.json  pnpm-lock.yaml
mcp-servers/jobspy-mcp-server/jobspy/: Dockerfile  main.py  requirements.txt
mcp-servers/jobspy-mcp-server/src/: index.js  logger.js  sseManager.js
mcp-servers/jobspy-mcp-server/src/prompts/: index.js  job-recommendations.js  resume-feedback.js  search-jobs.js
mcp-servers/jobspy-mcp-server/src/schemas/: jobSchema.js  searchParamsSchema.js
mcp-servers/jobspy-mcp-server/src/tools/: index.js  search-jobs.js
mcp-servers/jobspy-mcp-server/tests/: api.http  jobSchema.test.js
resume/templates/: ai_engineer.tex  founding_engineer.tex  platform_engineer.tex  research_engineer.tex
scripts/: __init__.py  cli.py
scripts/analysis/: __init__.py  ats_scorer.py  job_analyzer.py
scripts/discovery/: __init__.py  job_searcher.py
scripts/linkedin/: __init__.py  linkedin_manager.py
scripts/submission/: __init__.py  application_submitter.py  easy_apply_answers.py
scripts/sync/: __init__.py  sync_manager.py
scripts/tailoring/: __init__.py  resume_tailor.py
scripts/tracking/: __init__.py  tracker.py
scripts/validation/: __init__.py  config_validator.py
scripts/website/: __init__.py  generator.py
templates/responses/: follow_up.md
tests/: test_ats_scorer.py  test_bad_word_filter.py  test_config_validator.py  test_deduplication.py  test_easy_apply_answers.py  test_locale_merge.py  test_sync_manager.py
website/: astro.config.mjs  package.json  tailwind.config.mjs
website/src/config/: site.config.example.ts
website/src/content/: blog.example.md  index.example.md  skills.example.md
website/src/data/pages/: about.example.md  contact.example.md  experience.example.md  projects.example.md
website/src/layouts/: Layout.astro
website/src/pages/: about.astro  blog.astro  contact.astro  experience.astro  index.astro  projects.astro  skills.astro
